# Pixelizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  imgui.ini  main.cpp
.github/workflows/: static_analysis.yml  tests.yml
Scripts/: run_lizard.sh
Shaders/: PixelizeProcessor.frag  PixelizeProcessor.vert  SimpleShader.frag  SimpleShader.vert
Shaders/Common/: CameraUBO.h  PostProcessingPushConstantData.h  PushConstantData.h  QuadData.h
Source/: CMakeLists.txt  Pixelizer.cpp  Pixelizer.h
Source/Assets/: AssetManager.cpp  AssetManager.h  CMakeLists.txt
Source/Assets/Material/: CMakeLists.txt  Material.cpp  Material.h  MaterialData.h  MaterialInfo.h  VeraMaterialLoader.cpp  VeraMaterialLoader.h
Source/Assets/Model/: CMakeLists.txt  Model.cpp  Model.h  ModelMemoryDescription.h  Vertex.h
Source/Assets/Texture/: CMakeLists.txt  Texture.cpp  TextureData.h  TextureInfo.h  TextureLoader.cpp  TextureLoader.h
Source/Editor/: CMakeLists.txt  Defines.h
Source/Editor/UI/: CMakeLists.txt  UI.cpp  UI.h
Source/Editor/Window/: CMakeLists.txt  GLFWWindow.cpp  WindowSystem.cpp  WindowSystem.h
Source/Input/: CMakeLists.txt  GLFWInputManager.cpp  GLFWInputManager.h  GLFWKeyMappings.cpp  InputManager.h  InputSystem.cpp  InputSystem.h  KeyCodes.h  KeyMappings.cpp
Source/Logs/: BasicLogger.cpp  CMakeLists.txt  LogSeverity.h  LogSystem.h
Source/Objects/: CMakeLists.txt  Object.cpp  Object.h
Source/Objects/Components/: CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  MeshComponent.h  ObjectComponent.cpp  ObjectComponent.h  TransformComponent.cpp  TransformComponent.h  ViewerMovementComponent.cpp  ViewerMovementComponent.h
Source/RenderEngine/: CMakeLists.txt  FrameInfo.h  Renderer.cpp  Renderer.h
Source/RenderEngine/RenderingAPI/: CMakeLists.txt  Device.cpp  Device.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  PipelineConfigInfo.h  QueueFamilyIndices.h  ShaderModule.cpp  ShaderModule.h  SwapChain.cpp  SwapChain.h  VulkanDefines.h  VulkanSystem.cpp  VulkanSystem.h  VulkanUtils.cpp  VulkanUtils.h
Source/RenderEngine/RenderingAPI/CommandBuffer/: CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  SingleTimeCommandBuffer.cpp  SingleTimeCommandBuffer.h
Source/RenderEngine/RenderingAPI/Descriptors/: CMakeLists.txt  DescriptorPool.cpp  DescriptorPool.h  DescriptorPoolBuilder.cpp  DescriptorPoolBuilder.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorSetLayoutBuilder.cpp  DescriptorSetLayoutBuilder.h  DescriptorWriter.cpp  DescriptorWriter.h
Source/RenderEngine/RenderingAPI/Memory/: AllocatorInfo.h  Buffer.cpp  Buffer.h  CMakeLists.txt  DynamicBuffer.cpp  DynamicBuffer.h  Image.cpp  Image.h  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.h
Source/RenderEngine/RenderingAPI/Pipeline/: CMakeLists.txt
Source/RenderEngine/RenderingAPI/Pipeline/Compute/: CMakeLists.txt  ComputePipeline.cpp  ComputePipeline.h
Source/RenderEngine/RenderingAPI/Queue/: CMakeLists.txt  Queue.cpp  Queue.h
Source/RenderEngine/RenderingAPI/Synchronization/: CMakeLists.txt  Fence.cpp  Fence.h  Semaphore.cpp  Semaphore.h
Source/RenderEngine/RenderingAPI/Textures/: Texture.cpp  Texture.h
Source/RenderEngine/Textures/: CMakeLists.txt  Texture.cpp  (+1 more)
Source/Utils/: Algorithms.cpp  Algorithms.h  CMakeLists.txt  PathBuilder.cpp  PathBuilder.h
Tests/: CMakeLists.txt  Environment.cpp  Environment.h  TestUtils.cpp  TestUtils.h  main.cpp
Tests/Mocks/: MockInputManager.h
Tests/UnitTests/: CMakeLists.txt  DummyUnitTest.cpp
Tests/UnitTests/Assets/: AssetManagerTests.cpp  CMakeLists.txt
Tests/UnitTests/Assets/Texture/: CMakeLists.txt
Tests/UnitTests/Logs/: CMakeLists.txt  LogSystem.cpp
Tests/UnitTests/Memory/: Buffer.cpp  CMakeLists.txt
Tests/UnitTests/Objects/: CMakeLists.txt  Object.cpp
Tests/UnitTests/Objects/Components/: CMakeLists.txt  CameraComponent.cpp  MeshComponent.cpp  PlayerMovementComponent.cpp  TransformComponent.cpp
Tests/UnitTests/RenderEngine/: CMakeLists.txt
Tests/UnitTests/RenderEngine/RenderingAPI/: CMakeLists.txt  ShaderModule.cpp
Tests/UnitTests/RenderEngine/RenderingAPI/Descriptors/: CMakeLists.txt  DescriptorPoolBuilder.cpp  DescriptorSetLayoutBuilder.cpp
